--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>About Me</title>
         <link rel="stylesheet" href="CSS/style.css">
               <script src="https://cdn.jsdelivr.net/npm/smooth-scroll@16.1.3/dist/smooth-scroll.polyfills.min.js"></script>
-        <script src="/js/index.js"></script>
+        <script src="./js/index.js"></script>
     </head>
     <body>
         <div class="container">
